stylesheets/index-style.css
/* ... */
@keyframes movement_eleven {
    0%,
    200% {transform: none;}
    50% {transform: translate(15%, -20%) rotate(-120deg) scale(0.9);}
}
.twelve {
    height: 250px;
    width: 250px;
    left: 800px;
    top: 30px;
    transform: rotate(-180deg);
	animation:
        transform 7s ease-in-out infinite both alternate,
        movement_twelve 33s ease-in-out infinite both;
}
@keyframes movement_twelve {
    0%,
    100% {transform: none;}
    50% {transform: translate(30%, -20%) rotate(-300deg) scale(2);}
}
@keyframes transform {
    0%, 100% { border-radius: 33% 67% 70% 30% / 30% 40% 70% 70%; } 
    20% { border-radius: 37% 63% 51% 49% / 37% 35% 35% 63%; } 
    40% { border-radius: 36% 64% 64% 36% / 64% 48% 52% 26%; } 
    60% { border-radius: 37% 63% 51% 49% / 30% 30% 70% 73%; } 
    80% { border-radius: 40% 60% 42% 58% / 51% 51% 49% 59%; }
    10% { border-radius: 34% 66% 68% 32% / 32% 38% 68% 68%; } 
    30% { border-radius: 35% 65% 60% 40% / 36% 45% 50% 65%; } 
    50% { border-radius: 38% 62% 55% 45% / 40% 50% 60% 55%; } 
    70% { border-radius: 39% 61% 57% 43% / 35% 45% 65% 50%; }
}



/* Who We Are Section */
.who-we-are-section {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.wwa-content {
    text-align: center;
    width: 70%;
}
.wwa-title {
    font-size: 5vw;
    font-family: var(--main-font);
}
.wwa-par {
    font-size: 1.7vw;
    font-weight: 400;
}
.wwa-par span {
    display: inline-block;
    opacity: 0;
    transition: opacity 1s ease, color 1s ease;
    color: rgb(143, 143, 143);
}
.wwa-par span.visible {
    opacity: 1; /* Fully visible */
    color: var(--white-color); /* End color */
}



/* Our Service Section */
.our-service-section {
    position: relative;
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}
.service-content {
    text-align: center;
    position: relative;
    z-index: 1;
}
.service-title {
    font-size: 5vw;
    font-family: var(--main-font);
    margin: 0 0 30px 0;
}
.service-card-container {
    display: grid;
    grid-template-columns:  repeat(2, 1fr);
    grid-template-rows: 4fr, 1fr;
    grid-gap: max(10px ,calc(10 / var(--messurments)* 100vw));
}
.card {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    border: 0.1px solid var(--green_color);
    border-radius: 30px;
    backdrop-filter: blur(3.7rem);
    background-color: rgba(255, 255, 255, 0.05);
    overflow: hidden;
    transition: all 0.3s ease-out;
}
.card:hover {
    transform: translateY(-12px);
    box-shadow: 0 10px 2px rgba(0, 154, 111, 1), 0 10px 2px rgba(0, 154, 111, 1);
}
.coworking-card {
    grid-column: 2;
    grid-row: 1 / span 2;
}
.bt-card {
    border-radius: 30px;
    background-color: var(--green_color);
    transition: all 0.3s ease-out;
}
.bt-card:hover {
    transform: translateY(-12px);
    box-shadow: 0 10px 2px rgba(0, 154, 111, 1), 0 10px 2px rgba(0, 154, 111, 1);
}
.service-card-conent {
    text-decoration: none;
    color: var(--white-color);
    cursor: none;
    transition: all 0.3s ease-out;
}
.card:hover .service-card-conent {
    color: var(--green_color);
}
.button-card-conent {
    text-decoration: none;
    color: var(--white-color);
    cursor: none;
}
.card-title {
    font-size: 3vw;
    margin: 80px 0 50px 0;
}
.card-par {
    font-size: 1.4vw;
    margin: 0 20px 80px 20px;
}
.bt-card:hover .os-button-title {
    color: var(--navy_color);
}
.bg-shape-container {
    position: absolute;
    top: 100px;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}
.strip-overlay-blur {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
	width: 100%;
    filter: blur(20px);
}
.strip-shape-one, .strip-shape-two {
    background-color: var(--green_color);
    rotate: -5deg;
    /* clip-path: polygon(44% 21%, 71% 27%, 100% 16%, 100% 52%, 74% 50%, 48% 65%, 23% 62%, 0% 70%, 0% 35%, 20% 34%); */
}
.strip-shape-one {
    height: 100px;
    width: 140%;
    animation: moveClipShapeOne 10s infinite alternate ease-in-out;
}
.strip-shape-two {
    height: 200px;
    width: 130%;
    animation: moveClipShapeTwo 10s infinite alternate ease-in-out;
}
@keyframes moveClipShapeOne {
    0%, 100% {
        clip-path: polygon(44% 21%, 51% 27%, 100% 16%, 100% 52%, 74% 50%, 48% 65%, 23% 62%, 0% 70%, 0% 35%, 20% 34%);
    }
    50% {
        clip-path: polygon(34% 0%, 51% -10%, 100% 16%, 100% 52%, 54% 30%, 48% 65%, 23% 92%, 0% 80%, 0% 35%, 20% 44%);
    }
}
@keyframes moveClipShapeTwo {
    0%, 100% {
        clip-path: polygon(44% 21%, 71% 27%, 100% 16%, 100% 52%, 74% 50%, 48% 65%, 23% 62%, 0% 70%, 0% 35%, 20% 34%);
    }
    50% {
        clip-path: polygon(44% 31%, 71% 7%, 100% 16%, 100% 52%, 74% 80%, 48% 55%, 23% 82%, 0% 70%, 0% 35%, 20% 34%);
    }
}



/* Contact Us section */
.contact-us-section {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.cu-upper-content {
    height: 56%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.cu-title {
    font-size: 5vw;
    font-family: var(--main-font);
}
.social-media-links {
    height: 4%;
    width: 100%;
    display: flex;
    align-items: center;
    padding: 0 0 0 20px;
    margin: 0 0 0 0;
}
.social-media-icon {
    width: 30px;
    cursor: none;
}
.cu-down-content {
    height: 40%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
}
.contact-form {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-gap: max(10px ,calc(10 / var(--messurments)* 100vw));
    height: 100%;
    width: 100%;
}
/* ... */

